working before export

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>JSDev</title>
   </head>
   <body>
-    <h1>Alright. You're set.</h1>
-      <h2 class="tintedBlackLeft">Now build something amazing!</h2>
-      <p>JS in FM is amazing</p>
-    <button type="button">Click Me!</button>
+    
+    <!-- Table will be injected below -->
+    <div id="estimate-table-wrapper"></div>
 
     <script type="module">
       import "./src/index.js";
